--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/eslint": "^1.7.1",
     "@nuxt/test-utils": "^3.19.2",
     "@nuxt/ui": "^3.3.0",
+    "@nuxtjs/i18n": "^10.0.3",
     "eslint": "^9.32.0",
     "nuxt": "^4.0.1",
     "typescript": "^5.8.3",
